# Bachelor_Projekt

./: .project
Bachelor_Projekt/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Bachelor_Projekt/components/sen5x/: CMakeLists.txt  component.mk  sen5x_i2c.c  sensirion_common.c  sensirion_i2c.c  sensirion_i2c_hal.c
Bachelor_Projekt/components/sen5x/include/: sen5x_i2c.h  sensirion_common.h  sensirion_i2c.h  sensirion_i2c_hal.h
Bachelor_Projekt/main/: CMakeLists.txt  Kconfig.projbuild  ca_cert.pem  component.mk  device_control.c  device_control.h  enviromental_sensor.c  enviromental_sensor.h  hivemq-server-cert.pem  json_parser.c  json_parser.h  main.c  measurements.c  measurements.h  mqtt-client-cert-2.pem  my_mqtt.c  my_mqtt.h  my_wifi.c  my_wifi.h  ota_update.c  ota_update.h  touch_input.c  touch_input.h  wifi_scan.c  wifi_scan.h
Bachelor_Projekt/server_certs/: certificate.pem  hivemq-server-cert.pem  mqtt-client-key-2.pem  private.pem
